fix: fix various spacing issues

--- a/src/sass/_chroma_github.scss
+++ b/src/sass/_chroma_github.scss
@@ -1,7 +1,6 @@
 .chroma {
   background-color: #ffffff;
   color: #555;
-  margin: 1rem 0;
 }
 .chroma code {
   background-color: $color-code;
@@ -35,7 +34,7 @@
   > pre.chroma code {
     padding: 1rem;
     width: 100%;
-    overflow: auto;
+    overflow-x: auto;
   }
 }
 
